crates/aranya-policy-lang/tests/data/invalid_text/multiline_escape.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid string
  |
1 | let x = "foo \
  |              ^ cannot end line with escape
